--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@neotype/instances",
-    "version": "0.1.0",
+    "version": "0.0.0",
     "description": "Default implementations for Neotype equivalence relations, total orders, and semigroups for bulit-in JavaScript objects",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/jm4rtinez/neotype_instances.git"
+        "url": "https://github.com/jm4rtinez/neotype_instances.git"
     },
     "keywords": [
         "eq",
@@ -59,6 +59,7 @@
         "lint": "npx eslint --ext .ts .",
         "prettier:check": "npx prettier --check .",
         "prettier:write": "npx prettier --write .",
+        "release": "npx release-it",
         "test": "npm run lint --silent && mocha"
     },
     "peerDependencies": {
@@ -66,6 +67,7 @@
     },
     "devDependencies": {
         "@neotype/prelude": "^0.3",
+        "@release-it-plugins/lerna-changelog": "^5.0.0",
         "@types/chai": "^4.3.1",
         "@types/mocha": "^9.1.1",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -78,9 +80,10 @@
         "mocha": "^10.0.0",
         "prettier": "2.7.1",
         "prettier-plugin-organize-imports": "^3.1.1",
+        "release-it": "^15.5.0",
         "rimraf": "^3.0.2",
         "ts-node": "^10.8.2",
-        "typescript": "^4.8.3"
+        "typescript": "~4.8"
     },
     "eslintConfig": {
         "env": {
@@ -142,5 +145,28 @@
                 }
             }
         ]
+    },
+    "release-it": {
+        "git": {
+            "requireBranch": "main",
+            "commitMessage": "Prepare to release v${version}",
+            "tagAnnotation": "Version ${version}"
+        },
+        "github": {
+            "release": true,
+            "releaseName": "Version ${version}"
+        },
+        "hooks": {
+            "before:init": [
+                "npm test",
+                "npm run build:dist"
+            ]
+        },
+        "plugins": {
+            "@release-it-plugins/lerna-changelog": {
+                "infile": "CHANGELOG.md",
+                "launchEditor": true
+            }
+        }
     }
 }
