--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -10,14 +10,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version:
-          - 14
           - 16
           - 18
+    name: Node.js v${{ matrix.node-version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
