Ensure NPM publish access is always "public"

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "dist",
         "src"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "type": "module",
     "engines": {
         "node": "16.* || >= 18.*"
