--- a/package.json
+++ b/package.json
@@ -150,5 +150,9 @@
             }
         ],
         "proseWrap": "always"
+    },
+    "volta": {
+        "node": "18.12.1",
+        "npm": "9.1.3"
     }
 }
