--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true
     },
-    "include": ["./src", "./test"]
+    "include": ["./src"]
 }
