--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npx vitest run
+      - run: npm test
 
   test_ts:
     name: TypeScript @${{ matrix.ts-version }}
@@ -43,10 +43,11 @@ jobs:
           - ~4.7
           - ~4.8
           - ~4.9
+          - ~5.0
           - next
     steps:
       - uses: actions/checkout@v3
       - uses: volta-cli/action@v4
       - run: npm ci
       - run: npm i -D typescript@${{ matrix.ts-version }}
-      - run: npx vitest run
+      - run: npm test
