--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true
 	},
-	"include": ["./src"]
+	"include": ["./vitest.config.ts", "./src"]
 }
