Update the CI test workflow

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Build and test
 
 on:
   pull_request:
@@ -8,8 +8,17 @@ on:
   workflow_dispatch:
 
 jobs:
+  build_package:
+    name: Build package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: volta-cli/action@v4
+      - run: npm ci
+      - run: npm run build
+
   test_style:
-    name: Code Style
+    name: Test code style
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +27,7 @@ jobs:
       - run: npm run style
 
   test_node:
-    name: Node.js @${{ matrix.node-version }}
+    name: Test Node.js @${{ matrix.node-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,10 +42,9 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  test_ts:
-    name: TypeScript @${{ matrix.ts-version }}
+  test_typescript:
+    name: Test TypeScript @${{ matrix.ts-version }}
     runs-on: ubuntu-latest
-    continue-on-error: false
     strategy:
       matrix:
         ts-version:
@@ -50,4 +58,4 @@ jobs:
       - uses: volta-cli/action@v4
       - run: npm ci
       - run: npm i -D typescript@${{ matrix.ts-version }}
-      - run: npm test
+      - run: npm run typecheck
