--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
 		"@neotype/prelude": "^0.8",
 		"@typescript-eslint/eslint-plugin": "^6.4.1",
 		"@typescript-eslint/parser": "^6.4.1",
-		"@vitest/coverage-c8": "^0.29.3",
+		"@vitest/coverage-v8": "^0.34.1",
 		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-import": "^2.28.1",
@@ -90,7 +90,7 @@
 		"rimraf": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "~5.0",
-		"vitest": "^0.29.3"
+		"vitest": "^0.34.1"
 	},
 	"volta": {
 		"node": "18.12.1",
