--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
 		"prettier:check": "prettier --check --ignore-path ./.gitignore .",
 		"prettier:write": "prettier --write --ignore-path ./.gitignore .",
 		"style": "npm run lint && npm run prettier:check",
-		"test": "npm run typecheck && vitest run --coverage",
+		"test": "vitest run --coverage",
 		"test:watch": "vitest",
 		"typecheck": "tsc --skipLibCheck --noEmit",
 		"prebuild": "npm run clean",
