--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -17,6 +17,15 @@ jobs:
       - run: npm ci
       - run: npm run build
 
+  build_docsite:
+    name: Build documentation site
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: volta-cli/action@v4
+      - run: npm ci
+      - run: npm run docs
+
   test_style:
     name: Test code style
     runs-on: ubuntu-latest
